# SawyerCore

./: .env.example  .env.local.example  .env.sawyer.example  AGENTS.md  Cargo.toml  DEPLOYMENT.md  MODEL_SPEC.md  Makefile  QUICKSTART.md  README.md  RUNBOOK.md  SECURITY.md  TROUBLESHOOTING.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  typecheck_results.txt  typecheck_results_latest.txt  typecheck_results_latest_utf8.txt  typecheck_results_utf8.txt
.github/workflows/: ci.yml  release-single-binary.yml
.husky/: pre-commit
.sawyer/: execution.jsonl
artifacts/perf/: footprint-report.json  footprint-report.md
artifacts/release/: sentinel-report.json  sentinel-report.md
config/: model-packs.json  model-recommendations.json
config/examples/: airgapped-local.toml  local-balanced.toml  local-quality.toml  local-tiny.toml  termux-tiny.toml  wsl-gpu-vllm.toml
config/providers/: litellm.local.json  litellm.local.yaml  llamacpp.local.json  local-stack.json  vllm.local.json
crates/sawyer-agents/: Cargo.toml
crates/sawyer-agents/src/: lib.rs
crates/sawyer-agents/src/core/: mod.rs  orchestration.rs  task_graph.rs
crates/sawyer-agents/src/fallback/: fallback_chain.rs  mod.rs
crates/sawyer-agents/src/memory/: compression.rs  mod.rs  run_store.rs  state_store.rs
crates/sawyer-agents/src/roles/: agent_role.rs  executor.rs  mod.rs  optimizer.rs  planner.rs  verifier.rs
crates/sawyer-agents/src/scheduler/: adaptive_retry.rs  cost_aware_scheduler.rs  mod.rs
crates/sawyer-cli/: Cargo.toml
crates/sawyer-cli/src/: main.rs
crates/sawyer-core/: Cargo.toml
crates/sawyer-core/benches/: microbench.rs
crates/sawyer-core/src/: lib.rs
crates/sawyer-history/: Cargo.toml
crates/sawyer-kb/: Cargo.toml
crates/sawyer-kernels/: Cargo.toml
crates/sawyer-llm/: Cargo.toml
crates/sawyer-memory/: Cargo.toml
crates/sawyer-planner/: Cargo.toml
crates/sawyer-scheduler/: Cargo.toml
crates/sawyer-server/: Cargo.toml
crates/sawyer-server/src/: lib.rs
crates/sawyer-sim/: Cargo.toml
crates/sawyer-telemetry/: Cargo.toml
crates/sawyer-telemetry/src/: lib.rs
docs/: architecture.md  concepts.md  dependencies.md  model-sizing.md  modes.md  monetization.md  performance-principles.md  quickstart.md  roadmap.md  verification.md
docs/architecture/: governance-policy.md  sawyer-runtime.md
docs/configuration/: config-generated-readme.md  default-profiles.md  toggles.md
docs/deploy/: local-provider-stack.md  minimal-build.md  modes.md  single-binary.md  vllm-litellm.md
docs/developers/: getting-started.md  plugin-manifest.md  security-model.md
docs/edge/: mobile-npu-offload.md
docs/install/: linux.md  macos.md  termux.md  windows.md  wsl.md
docs/marketplace/: operator-guide.md
docs/onboarding/: device-wizard.md
docs/operator/: common-failures.md  degraded-states.md  verification-checklist.md
docs/performance/: dependency-budget.md
docs/recommendations/: recommendation-engine.md
docs/release/: process.md
docs/repo-os/: deferred-ideas.md  failure-taxonomy.md  operator-truth.md  product-truth-audit.md  release-bar.md  scope-map.md  verification-matrix.md
docs/runtime/: adaptive-intelligence.md  context-guard.md  hardware-aware-scheduling.md  kb-system.md  micro-index.md  offline-first-mode.md  planner.md  preload-adaptation.md  preloading.md  scoring.md  telemetry.md
docs/sdk/: developer-guide.md
docs/security/: binary-verification.md  dependency-policy.md
docs/verification/: ai-runtime-tests.md
examples/: basic-sim.md  local-agent.md
profiles/: balanced.json  cost-saver.json  developer.json  local-safe.json  mobile-edge.json  performance.json
scripts/: check-env.ts  install-linux.sh  install-llamacpp.sh  install-macos.sh  install-termux.sh  install-windows.ps1  install-wsl.sh  smoke-local-stack.sh  start-litellm.sh  start-llamacpp.sh  start-local-stack.sh  start-vllm.sh  verify-rust-only.sh
scripts/ci/: ci-health.ts  classify-failure.ts  repair-plan.ts  repo-state.ts  verify-repair.ts
scripts/intelligence/: metrics.ts
scripts/perf/: measure-footprint.ts
scripts/release/: sentinel.ts
scripts/verify/: hardware.ts  marketplace.ts  offline.ts  plugins.ts  sdk.ts
sdk/: client.ts  plugin.ts  types.ts
src/api/: index.ts  router.ts  runtime.ts  tenant-manager.ts  types.ts
src/billing/: controller.ts  index.ts  pricing.ts  router.ts  stripe.ts  types.ts  usage-tracker.ts
src/capabilities/: registry.ts  types.ts
src/cli/: sawyer-doctor.ts  sawyer-init.ts
src/governance/: autonomy-contract.ts
src/growth/: engine.ts  index.ts  router.ts  types.ts
src/hardware/: probe.ts  profile.ts
src/intelligence/: decision-engine.ts  index.ts  insight-generator.ts  pattern-engine.ts  prediction-system.ts  types.ts
src/marketplace/: catalog.ts  install.ts  verification.ts
src/mesh/: audit.ts  executor.ts  health.ts  node-registry.ts  task-routing.ts
src/observability/: audit.ts
src/offline/: queue.ts  state.ts  sync.ts
src/plugins/: loader.ts  manifest.ts  permissions.ts  sandbox.ts
src/policy/: policy-engine.ts
src/providers/: provider.ts  providers.ts
src/runtime/: config-loader.ts  defaults.ts  edge-intelligence.ts  mobile-node.ts  onboarding.ts  optimization-engine.ts  preload-planner.ts  recommendation-engine.ts  router.ts
src/saas/: index.ts  onboarding.ts
src/system/: execution-graph.ts  index.ts
src/tenancy/: controller.ts  index.ts  middleware.ts  types.ts
src/types/: config.ts  contracts.ts
src/ui/: runtime-settings.ts
tests/billing/: stripe-state.test.ts
tests/ci/: classify-failure.test.ts  repair-tools.test.ts
tests/config/: config-init.test.ts
tests/intelligence/: intelligence.test.ts
tests/mesh/: executor.test.ts
tests/perf/: footprint.test.ts
tests/policy/: policy-engine.test.ts
tests/release/: sentinel.blocker.test.ts
tests/runtime/: compression.test.ts  determinism.test.ts  edge-intelligence.test.ts  intelligence.test.ts  memory.test.ts  onboarding-recommendation.test.ts  preload-planner.test.ts  providers.test.ts  router.test.ts  safety.test.ts
(+57 files in other folders)
