[package]
name = "sawyer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sawyer-core = { path = "../sawyer-core" }
sawyer-kernels = { path = "../sawyer-kernels" }
sawyer-llm = { path = "../sawyer-llm" }
sawyer-server = { path = "../sawyer-server" }
sawyer-sim = { path = "../sawyer-sim" }
sawyer-history = { path = "../sawyer-history" }
sawyer-telemetry = { path = "../sawyer-telemetry" }

[[bin]]
name = "sawyer"
path = "src/main.rs"
