[package]
name = "sawyer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cpu-local", "cli", "server", "adaptive"]
cpu-local = []
server = ["dep:sawyer-server", "dep:tokio"]
cli = ["dep:clap", "dep:tracing-subscriber"]
vllm = []
litellm = []
llama-cpp-http = []
cluster = []
telemetry = []
adaptive = []
benches = []
unsafe-dev = []

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true

clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

sawyer-core = { path = "../sawyer-core" }
sawyer-kernels = { path = "../sawyer-kernels" }
sawyer-llm = { path = "../sawyer-llm" }
sawyer-server = { path = "../sawyer-server", optional = true }
sawyer-sim = { path = "../sawyer-sim" }

[[bin]]
name = "sawyer"
path = "src/main.rs"
