[package]
name = "sawyer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cpu-local", "cli", "server", "adaptive"]
cpu-local = []
server = ["dep:sawyer-server", "dep:tokio"]
cli = ["dep:clap", "dep:tracing-subscriber"]
vllm = []
litellm = []
llama-cpp-http = []
cluster = []
telemetry = []
adaptive = []
benches = []
unsafe-dev = []

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true

clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

sawyer-core = { path = "../sawyer-core" }
sawyer-planner = { path = "../sawyer-planner" }
sawyer-kb = { path = "../sawyer-kb" }
sawyer-kernels = { path = "../sawyer-kernels" }
sawyer-llm = { path = "../sawyer-llm" }
sawyer-server = { path = "../sawyer-server", optional = true }
sawyer-sim = { path = "../sawyer-sim" }
sawyer-history = { path = "../sawyer-history" }
sawyer-telemetry = { path = "../sawyer-telemetry" }

[[bin]]
name = "sawyer"
path = "src/main.rs"
