[package]
name = "sawyer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sawyer-kernels = { path = "../sawyer-kernels" }
sawyer-memory = { path = "../sawyer-memory" }
sawyer-scheduler = { path = "../sawyer-scheduler" }
sawyer-history = { path = "../sawyer-history" }
sawyer-telemetry = { path = "../sawyer-telemetry" }
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
sawyer-sim = { path = "../sawyer-sim" }

[[bench]]
name = "microbench"
harness = false
