[package]
name = "sawyer-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sawyer-kernels = { path = "../sawyer-kernels" }
sawyer-core = { path = "../sawyer-core" }
sawyer-llm = { path = "../sawyer-llm" }
sawyer-sim = { path = "../sawyer-sim" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
