[package]
name = "sawyer-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
archive = ["dep:flate2"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
flate2 = { version = "1.0", optional = true }
